# ray_engine

./: .gitmodules  README.md
optix_framework/: .gitignore  CMakeLists.txt  CMakeSettings.json  image_utils.py  materials.py  optix_framework.sln  opttest.py  process_optresults.py  raw_utils.py  run_renderer.py  run_simulation.py
optix_framework/CMake/: FindCUDA.cmake  FindOptiX.cmake  FindSUtilGLUT.cmake
optix_framework/GEL/: CMakeLists.txt  GEL.vcxproj  GEL.vcxproj.filters  GEL_dll.vcxproj  GEL_dll.vcxproj.filters
optix_framework/GEL/CGLA/: he.txt  tu.txt
optix_framework/GEL/Util/: XmlParser.cpp  XmlParser.h
optix_framework/bssrdf_creator/: CMakeLists.txt  bssrdf_creator.cpp  bssrdf_creator.h  bssrdf_creator.vcxproj  bssrdf_creator.vcxproj.filters  bssrdf_parameter_manager.cpp  bssrdf_parameter_manager.h  desktop.ini  full_bssrdf_generator.cpp  full_bssrdf_generator.h  full_bssrdf_host_device_common.h  imgui.ini  main.cpp  photon_trace_reference_bssrdf.h  photon_trace_structs.h  reference_bssrdf.cpp  reference_bssrdf.h  reference_bssrdf_gpu.cpp  reference_bssrdf_gpu.h  reference_bssrdf_gpu_mixed.cpp  reference_bssrdf_gpu_mixed.h
optix_framework/bssrdf_creator/CUDA_files/: planar_bssrdf.cu  reference_bssrdf.cu  reference_bssrdf_gpu.cu  reference_bssrdf_gpu_mixed.cu  render_bssrdf.cu
optix_framework/gel/: CMakeLists.txt  GEL.vcxproj  GEL_dll.vcxproj
optix_framework/lib64/: AntTweakBar64.lib
optix_framework/nfd/: CMakeLists.txt  nfd.vcxproj  nfd.vcxproj.filters
optix_framework/optimization_results/: allvecs.txt  approx_standard_dipole_bssrdf_a_0.996483001172_0.98730606488_0.820895522388_s_0.290580785502_0.46286926265_1.13194856469.txt  fopt.txt  plotdata.pkl  rendering_disc_lights_potato_volume_pt_50000_samples.txt  result.txt  results_gradient.txt  xopt.txt
optix_framework/optix_framework/: BRDF.cpp  CMakeLists.txt  GLFWDisplay.cpp  GLFWDisplay.h  GLUTDisplay.cpp  GLUTDisplay.h  GLUTDisplayWrapper.cpp  GLUTDisplayWrapper.h  HDRLoader.cpp  HDRLoader.h  ImageLoader.cpp  ImageLoader.h  Mouse.cpp  Mouse.h  PPMLoader.cpp  PPMLoader.h  RawLoader.cpp  RawLoader.h  SampleScene.cpp  SampleScene.h  aisceneloader.cpp  aisceneloader.h  ambient_occlusion.cpp  ambient_occlusion.h  apple_juice.cpp  apple_juice.h  approximate_dipoles_device.h  approximate_dipoles_host.cpp  approximate_dipoles_host.h  approximate_directional_dipole.h  approximate_standard_dipole.h  area_light.h  box.cpp  box.h  brdf.h  brdf_common.h  brdf_device.h  brdf_host.cpp  brdf_host.h  brdf_properties.h  (+277 more)
optix_framework/optix_framework/CUDA_files/: absorbing_glass.cu  box.cu  brdf_shader.cu  bssrdf_plane_visualizer.cu  chull.cu  constant_background.cu  constant_shader.cu  debug_camera.cu  depth_ray.cu  dispersion_shader.cu  empirical_bssrdf.cu  env_cameras.cu  environment_map_background.cu  forward_dipole.cu  glass_shader.cu  glossy_shader.cu  lambertian_shader.cu  lambertian_shader_global_illum.cu  material_labels_shader.cu  metal_shader.cu  mirror_shader.cu  normal_shader.cu  obj_material.cu  phong.h  pinhole_camera.cu  planar_bssrdf.cu  reference_bssrdf.cu  reference_bssrdf_gpu.cu  render_bssrdf.cu  render_bssrdf_hemisphere.cu  render_reference_bssrdf.cu  render_reference_bssrdf_gpu.cu  sample_camera.cu  sky_model_background.cu  sphere.cu  subsurface_scattering_sampled.cu  subsurface_scattering_sampled_default.cu  subsurface_scattering_sampled_forward_dipole.cu  subsurface_scattering_sampled_neural_network.cu  subsurface_scattering_shader.cu  (+8 more)
optix_framework/optix_framework/PTX_files/: absorbing_glass.cu.ptx  box.cu.ptx  chull.cu.ptx  constant_background.cu.ptx  constant_shader.cu.ptx  dispersion_shader.cu.ptx  env_cameras.cu.ptx  environment_map_background.cu.ptx  glass_shader.cu.ptx  glossy_shader.cu.ptx  hybrid_cameras.cu.ptx  ior_camera.cu.ptx  lambertian_shader.cu.ptx  light_programs.cu.ptx  metal_shader.cu.ptx  mirror_shader.cu.ptx  mis_diffuse_glossy.cu.ptx  normal_shader.cu.ptx  obj_material.cu.ptx  opengl_camera.cu.ptx  pinhole_camera.cu.ptx  procedural_textures.cu.ptx  sample_camera.cu.ptx  sky_model_background.cu.ptx  sphere.cu.ptx  subsurface_scattering_shader.cu.ptx  tonemap_camera.cu.ptx  triangle_mesh.cu.ptx  triangle_mesh_gbuffer.cu.ptx
optix_framework/optix_framework/imgui/: imgui.cpp  imgui.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_impl_glut.cpp  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
optix_framework/optprops/: CMakeLists.txt  Interface.cpp  Interface.h  LorenzMie.h  Medium.cpp  Medium.h  Parse.cpp  Parse.h  Randomizer.h  cdf_bsearch.h  glass.cpp  glass.h  incandescent.cpp  incandescent.h  load_mpml.cpp  load_mpml.h  milk.cpp  milk.h  minimal_algebra.h  mt_random.h  optprops.vcxproj  optprops.vcxproj.filters  optprops_common.h  optprops_dll.vcxproj  sampler.h  spectrum2rgb.h  spectrum2xyz.h  sun.cpp  sun.h  water.cpp  water.h
optix_framework/renderer/: CMakeLists.txt  main.cpp  renderer.vcxproj  renderer.vcxproj.filters
optix_framework/sutil/: GLUTDisplay.cpp  GLUTDisplay.h  HDRLoader.h  ImageDisplay.cpp  ImageLoader.cpp  ImageLoader.h  MeshBase.cpp  MeshScene.cpp  Mouse.cpp  Mouse.h  NsightHelper.h  OptixMesh.h  OptixMeshClasses.h  OptixMeshImpl.cpp  RawLoader.h  SampleScene.cpp  SampleScene.h  SunSky.cpp  SunSky.h  glm.cpp  glm.h  sutil.c  sutil.h  sutil.vcxproj  sutil.vcxproj.filters  sutil_dll.vcxproj  sutil_dll.vcxproj.filters  sutilapi.h
